tests/baselines/reference/exportsAndImportsWithUnderscores1.errors.txt
tests/cases/conformance/es6/modules/m1.ts(5,5): error TS1005: ',' expected.


==== tests/cases/conformance/es6/modules/m1.ts (1 errors) ====
    var R: any
    export default R = {
        "__": 20,
        "_": 10
        "___": 30
        ~~~~~
!!! error TS1005: ',' expected.
    }
    
==== tests/cases/conformance/es6/modules/m2.ts (0 errors) ====
    import R from "./m1";
    const { __, _, ___ } = R;
    